// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixedSizeGrid callback props should call onScroll when scroll position changes 1`] = `
Array [
  Array [
    Object {
      "horizontalScrollDirection": "forward",
      "scrollLeft": 0,
      "scrollTop": 0,
      "verticalScrollDirection": "forward",
    },
  ],
  Array [
    Object {
      "horizontalScrollDirection": "forward",
      "scrollLeft": 100,
      "scrollTop": 50,
      "verticalScrollDirection": "forward",
    },
  ],
  Array [
    Object {
      "horizontalScrollDirection": "backward",
      "scrollLeft": 0,
      "scrollTop": 150,
      "verticalScrollDirection": "forward",
    },
  ],
  Array [
    Object {
      "horizontalScrollDirection": "forward",
      "scrollLeft": 150,
      "scrollTop": 0,
      "verticalScrollDirection": "backward",
    },
  ],
]
`;

exports[`FixedSizeGrid changing cell size updates the rendered items 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 2,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 1,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 2,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 3,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 1,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 2,
    },
  ],
]
`;

exports[`FixedSizeGrid overscanCount should accommodate a custom overscan 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 9,
      "overscanRowStopIndex": 16,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 10,
      "visibleRowStopIndex": 14,
    },
  ],
]
`;

exports[`FixedSizeGrid overscanCount should not scan past the beginning of the grid 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
]
`;

exports[`FixedSizeGrid overscanCount should not scan past the end of the grid 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 8,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 5,
      "overscanRowStopIndex": 9,
      "visibleColumnStartIndex": 9,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 6,
      "visibleRowStopIndex": 9,
    },
  ],
]
`;

exports[`FixedSizeGrid overscanCount should overscan in the direction being scrolled 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 9,
      "overscanRowStopIndex": 16,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 10,
      "visibleRowStopIndex": 14,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 9,
      "overscanColumnStopIndex": 14,
      "overscanRowStartIndex": 39,
      "overscanRowStopIndex": 46,
      "visibleColumnStartIndex": 10,
      "visibleColumnStopIndex": 12,
      "visibleRowStartIndex": 40,
      "visibleRowStopIndex": 44,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 3,
      "overscanColumnStopIndex": 8,
      "overscanRowStartIndex": 18,
      "overscanRowStopIndex": 25,
      "visibleColumnStartIndex": 5,
      "visibleColumnStopIndex": 7,
      "visibleRowStartIndex": 20,
      "visibleRowStopIndex": 24,
    },
  ],
]
`;

exports[`FixedSizeGrid overscanCount should require a minimum of 1 overscan to support tabbing 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 5,
      "overscanRowStartIndex": 9,
      "overscanRowStopIndex": 15,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 10,
      "visibleRowStopIndex": 14,
    },
  ],
]
`;

exports[`FixedSizeGrid scrollToItem method should scroll to the correct item for align = "auto" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 8,
      "overscanColumnStopIndex": 12,
      "overscanRowStartIndex": 6,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 9,
      "visibleColumnStopIndex": 11,
      "visibleRowStartIndex": 7,
      "visibleRowStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 5,
      "overscanRowStartIndex": 1,
      "overscanRowStopIndex": 7,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 2,
      "visibleRowStopIndex": 6,
    },
  ],
]
`;

exports[`FixedSizeGrid scrollToItem method should scroll to the correct item for align = "center" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 8,
      "overscanColumnStopIndex": 12,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 13,
      "visibleColumnStartIndex": 9,
      "visibleColumnStopIndex": 11,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 12,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 7,
      "overscanColumnStopIndex": 11,
      "overscanRowStartIndex": 6,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 8,
      "visibleColumnStopIndex": 10,
      "visibleRowStartIndex": 7,
      "visibleRowStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 97,
      "overscanColumnStopIndex": 99,
      "overscanRowStartIndex": 95,
      "overscanRowStopIndex": 99,
      "visibleColumnStartIndex": 98,
      "visibleColumnStopIndex": 99,
      "visibleRowStartIndex": 96,
      "visibleRowStopIndex": 99,
    },
  ],
]
`;

exports[`FixedSizeGrid scrollToItem method should scroll to the correct item for align = "end" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 8,
      "overscanColumnStopIndex": 12,
      "overscanRowStartIndex": 6,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 9,
      "visibleColumnStopIndex": 11,
      "visibleRowStartIndex": 7,
      "visibleRowStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 7,
      "overscanColumnStopIndex": 11,
      "overscanRowStartIndex": 5,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 8,
      "visibleColumnStopIndex": 10,
      "visibleRowStartIndex": 6,
      "visibleRowStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
]
`;

exports[`FixedSizeGrid scrollToItem method should scroll to the correct item for align = "start" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 9,
      "overscanColumnStopIndex": 13,
      "overscanRowStartIndex": 9,
      "overscanRowStopIndex": 15,
      "visibleColumnStartIndex": 10,
      "visibleColumnStopIndex": 12,
      "visibleRowStartIndex": 10,
      "visibleRowStopIndex": 14,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 8,
      "overscanColumnStopIndex": 12,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 14,
      "visibleColumnStartIndex": 9,
      "visibleColumnStopIndex": 11,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 13,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 97,
      "overscanColumnStopIndex": 99,
      "overscanRowStartIndex": 95,
      "overscanRowStopIndex": 99,
      "visibleColumnStartIndex": 98,
      "visibleColumnStopIndex": 99,
      "visibleRowStartIndex": 96,
      "visibleRowStopIndex": 99,
    },
  ],
]
`;

exports[`FixedSizeGrid should disable pointer events while scrolling 1`] = `
Object {
  "height": 2500,
  "overflow": "hidden",
  "pointerEvents": "",
  "width": 10000,
}
`;

exports[`FixedSizeGrid should disable pointer events while scrolling 2`] = `
Object {
  "height": 2500,
  "overflow": "hidden",
  "pointerEvents": "none",
  "width": 10000,
}
`;

exports[`FixedSizeGrid should disable pointer events while scrolling 3`] = `
Object {
  "height": 2500,
  "overflow": "hidden",
  "pointerEvents": "",
  "width": 10000,
}
`;

exports[`FixedSizeGrid should render a grid of items 1`] = `24`;

exports[`FixedSizeGrid should render a grid of items 2`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
]
`;

exports[`FixedSizeGrid should render an empty grid 1`] = `0`;

exports[`FixedSizeGrid should render an empty grid 2`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 0,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 0,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 0,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 0,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 0,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 0,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 0,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 0,
    },
  ],
]
`;

exports[`FixedSizeGrid should support momentum scrolling on iOS devices 1`] = `"touch"`;

exports[`FixedSizeGrid style overrides should support className prop 1`] = `"custom"`;

exports[`FixedSizeGrid style overrides should support style prop 1`] = `"red"`;

exports[`FixedSizeGrid useIsScrolling should not pass an isScrolling param to children unless requested 1`] = `
Array [
  Object {
    "columnIndex": 0,
    "isScrolling": undefined,
    "key": "0:0",
    "rowIndex": 0,
    "style": Object {
      "height": 25,
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": 100,
    },
  },
]
`;

exports[`FixedSizeGrid useIsScrolling should pass an isScrolling param to children if requested 1`] = `
Array [
  Object {
    "columnIndex": 0,
    "isScrolling": false,
    "key": "0:0",
    "rowIndex": 0,
    "style": Object {
      "height": 25,
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": 100,
    },
  },
]
`;

exports[`FixedSizeGrid useIsScrolling should pass an isScrolling param to children if requested 2`] = `
Array [
  Object {
    "columnIndex": 0,
    "isScrolling": true,
    "key": "3:0",
    "rowIndex": 3,
    "style": Object {
      "height": 25,
      "left": 0,
      "position": "absolute",
      "top": 75,
      "width": 100,
    },
  },
]
`;

exports[`FixedSizeGrid useIsScrolling should pass an isScrolling param to children if requested 3`] = `
Array [
  Object {
    "columnIndex": 0,
    "isScrolling": false,
    "key": "3:0",
    "rowIndex": 3,
    "style": Object {
      "height": 25,
      "left": 0,
      "position": "absolute",
      "top": 75,
      "width": 100,
    },
  },
]
`;
